Update PaintLayer::needsPaintPhase flags when layer self-painting status changes

This had been included in https://codereview.chromium.org/1862313002/
before I removed it thinking that self-painting status should cause
layout and paint invalidation. However, bug 604351 is a case that
self-painting status change doesn't cause layout and paint invalidation.

BUG=604351
TEST=PaintLayerPainterTest.PaintPhasesUpdateOnBecomingSelfPainting
TEST=PaintLayerPainterTest.PaintPhasesUpdateOnBecomingNonSelfPainting

Review URL: https://codereview.chromium.org/1900263002

Cr-Commit-Position: refs/heads/master@{#388880}

Former-commit-id: 2d55d696deec11d34539475374366a63d1dfd082